--- a/pages/service.pug
+++ b/pages/service.pug
@@ -121,9 +121,53 @@ html(lang="en")
                         img(src="./images/services10.png", alt="")
                     a(href="#")
 
+        section.work 
+            .main_container 
+                h2 Как выглядит наша работа?
+                p Обращаясь в службу помощи при ДТП «50-50-50», вы получаете квалифицированную помощь независимо от степени тяжести аварии.
+            img(src="./images/work_desktop.png", alt="").desktop_img
+                
+            img(src="./images/work_mobile.png", alt="").mobile_img
+            
+        section.partners 
+           .main_container 
+                .bg_number 50-50-50
+                h2 Наши ключевые партнеры
+                p За годы работы мы сформировали множество как устных, так и договорных отношений со всеми компаниями и инстанциями участвующими в процессах возникающих после ДТП.
+
+                .about_services_in 
+                    a(href="#")
+                        img(src="./images/partner1.png", alt="")
+                    a(href="#")
+                        img(src="./images/partner2.png", alt="")
+                    a(href="#")
+                        img(src="./images/partner3.png", alt="")
+                    a(href="#")
+                        img(src="./images/partner4.png", alt="")
+                    a(href="#")
+                        img(src="./images/partner5.png", alt="")
+                    a(href="#")
+                        img(src="./images/partner6.png", alt="")
+                    a(href="#")
+                        img(src="./images/partner7.png", alt="")
+                    a(href="#")
+                        img(src="./images/partner8.png", alt="")
+                    a(href="#")
+                        img(src="./images/partner8.png", alt="")
+                    a(href="#")
+                        img(src="./images/partner8.png", alt="")
+                    a(href="#")
+
+        section.comment 
+            .main_container 
+                h2 Отзывы
+                p Мы не пишем сами себе отзывы. Основные отзывы о нас можно найти на Яндекс.Картах, где самая жесткая модерация и исключены накрутки.
+
+                img(src="./images/comment_img.png", alt="")
+
         section.newsline 
             .main_container 
-                .bg_number.bg_number_one 50-50-50
+                .bg_number_one 50-50-50
 
                 .bg_number 50-50-50
 
