--- a/html/css/style.scss
+++ b/html/css/style.scss
@@ -162,6 +162,307 @@
     }
 }
 
+.home {
+    position: relative;
+    background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+    .home_wrapper {
+        overflow: hidden;
+        max-width: 1920px;
+        margin: 0 auto;
+        display: flex;
+        align-items: start;
+        
+        .bg_number {
+            color: #FFF;
+            font-family: "DIN Pro", sans-serif;
+            font-size: 290.534px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 20.049px;
+            text-transform: uppercase;
+            position: absolute;
+            opacity: 0.5;
+            bottom: 90px;
+            white-space: nowrap;
+        }
+
+        .home_img {
+            position: relative;
+            z-index: 2;
+        }
+        .home_text {
+            margin-top: 74px;
+            position: relative;
+            z-index: 2;
+
+            h1 {
+                max-width: 688px;
+                color: $main_text;
+                font-family: $Factor;
+                font-size: 40px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 55px;
+                margin-bottom: 13px;
+            }
+
+            p {
+                max-width: 345px;
+                color: #0B1F33;
+                font-family: $Factor;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 27px;
+                margin-bottom: 47px;
+            }
+
+            .home_btns {
+                display: flex;
+                align-items: start;
+                gap: 26px;
+                a {
+                    display: inline-flex;
+                    align-items: center;
+                    gap: 10px;
+                    border-radius: 41.975px;
+                    background: #FF5600;
+                    padding: 8px 28px;
+                    color: #FFF;
+                    font-family: 'DIN Pro',sans-serif;
+                    font-size: 30.919px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: normal;
+                    text-transform: uppercase;
+
+                    img {
+                        width: 26px;
+                    }
+                }
+            }
+
+            .home_bottom {
+                margin-top: 59px;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                .home_bottom_block {
+                    display: flex;
+                    align-items: center;
+                    gap: 20px;
+                    span {
+                        border-radius: 40px;
+                        background: #FFF;
+                        padding: 11px 25px;
+                        color: #000;
+                        text-align: center;
+                        font-family: $Factor;
+                        font-size: 16px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: normal;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.accident {
+    padding: 100px 0 178px 0;
+    .main_container {
+        h2 {
+            color: $main_text;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            margin-bottom: 10px;
+        }
+
+        p {
+            color: $main_text2;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 27px;
+            margin-bottom: 41px;
+        }
+
+        .accident_in {
+            display: flex;
+            align-items: center;
+            .accident_card {
+                padding: 0 33px 0 117px;
+                position: relative;
+                width: 378px;
+                height: 130px;
+                overflow: hidden;
+                border-radius: 12px;
+                background: #EDF2FE;
+                display: flex;
+                align-items: center;
+                gap: 28px;
+
+                .circle {
+                    position: absolute;
+                    left: -50px;
+                    width: 141px;
+                    height: 141px;
+                    border-radius: 50%;
+                    background-color: #1D5DEB;
+                }
+
+                .number {
+                    position: absolute;
+                    left: 25px;
+                    z-index: 2;
+                    color: #FFF;
+                    text-align: center;
+                    font-family: $Factor;
+                    font-size: 60px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: normal;
+                }
+
+                p {
+                    margin-bottom: 0;
+                    text-align: left;
+                    max-width: 228px;
+                    color: #0B1F33;
+                    font-family: $Factor;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 27px;
+                }
+            }
+        }
+    }
+}
+
+.assistance {
+    .main_container {
+        h2 {
+            color: $main_text;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            margin-bottom: 83px;
+        }
+    
+        .assistance_in {
+            margin-bottom: 97px;
+            .assistance_card {
+                max-width: 208px;
+                text-align: center;
+                img {
+                    margin-bottom: 20px;
+                }
+
+                h4 {
+                    color: #0B1F33;
+                    text-align: center;
+                    font-family: $Factor;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 27px;
+                    margin-bottom: 13px;
+                }
+
+                p {
+                    color: #757F88;
+                    text-align: center;
+                    font-family: $Factor;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 23px
+                }
+            }
+        }
+    }
+}
+
+.help {
+    padding: 100px 0 115px 0;
+    background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+    .main_container {
+        position: relative;
+        h2 {
+            color: $main_text;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            margin-bottom: 10px;
+        }
+
+        p {
+            color: $main_text2;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 27px;
+            padding-bottom: 38px;
+        }
+
+        .bg_number {
+            color: #FFF;
+            font-family: "DIN Pro", sans-serif;
+            font-size: 290.534px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 20.049px;
+            text-transform: uppercase;
+            position: absolute;
+            opacity: 0.5;
+            bottom: -40px;
+            left: 0;
+            white-space: nowrap;
+        }
+        
+        .help_in {
+            display: flex;
+            align-items: start;
+            flex-wrap: wrap;
+            gap: 40px;
+            .help_card {
+                width: calc(100% / 4 - 0px);
+                padding: 20px 33px 25px 33px;
+                border-radius: 12px;
+                background: #FFF;
+                img {
+                    margin-bottom: 20px;
+                }
+
+                p {
+                    text-align: left;
+                    color: $main_text;
+                    font-family: $Factor;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 27px;
+                }
+            }
+        }
+    }
+}
 
 
 @import './parts/footer';
